--- a/package.json
+++ b/package.json
@@ -6,22 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "introspect": "drizzle-kit introspect:mysql",
+    "migrate": "drizzle-kit generate:mysql",
+    "push": "drizzle-kit push:mysql"
   },
   "dependencies": {
+    "@planetscale/database": "^1.11.0",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
+    "drizzle-orm": "^0.29.0",
+    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-moment": "^1.1.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.20.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "typescript": "^5"
   }
 }
