--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@planetscale/database": "^1.11.0",
     "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
     "drizzle-orm": "^0.29.0",
     "next": "14.0.2",
