--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "push": "drizzle-kit push:mysql"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.3.8",
     "@planetscale/database": "^1.11.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
