--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.8",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.11.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
+    "clsx": "^2.0.0",
     "drizzle-orm": "^0.29.0",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-moment": "^1.1.3",
+    "tailwind-merge": "^2.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
