--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "react-moment": "^1.1.3",
     "tailwind-merge": "^2.0.0",
