--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "introspect": "drizzle-kit introspect:mysql",
     "migrate": "drizzle-kit generate:mysql",
-    "push": "drizzle-kit push:mysql"
+    "push": "drizzle-kit push:mysql",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.8",
@@ -20,6 +21,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.29.0",
+    "mysql2": "^3.6.5",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -39,7 +41,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.4",
+    "drizzle-kit": "^0.20.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
