--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.29.0",
+    "jotai": "^2.6.0",
     "mysql2": "^3.6.5",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
