--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "introspect": "drizzle-kit introspect:mysql",
     "migrate": "drizzle-kit generate:mysql",
     "push": "drizzle-kit push:mysql",
-    "studio": "drizzle-kit studio"
+    "studio": "drizzle-kit studio",
+    "node": "node server.js"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.8",
@@ -18,18 +19,23 @@
     "@planetscale/database": "^1.11.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.29.0",
     "jotai": "^2.6.0",
     "mysql2": "^3.6.5",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0-next.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "react-moment": "^1.1.3",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
