--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "introspect": "drizzle-kit introspect:mysql",
     "migrate": "drizzle-kit generate:mysql",
     "push": "drizzle-kit push:mysql",
-    "studio": "drizzle-kit studio",
-    "node": "node server.js"
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.8",
@@ -24,8 +23,10 @@
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.29.0",
+    "http": "^0.0.1-security",
     "jotai": "^2.6.0",
     "mysql2": "^3.6.5",
+    "net": "^1.0.2",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-connect": "^1.0.0-next.4",
