its working ahhhh peer js

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "drizzle-orm": "^0.29.0",
+    "firebase": "^10.7.0",
     "http": "^0.0.1-security",
     "jotai": "^2.6.0",
     "mysql2": "^3.6.5",
@@ -33,6 +34,7 @@
     "peerjs": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "react-moment": "^1.1.3",
