--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "next-connect": "^1.0.0-next.4",
+    "peer": "^1.0.2",
     "peerjs": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
