--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@planetscale/database": "^1.11.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
+    "@types/react-color": "^3.0.10",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
@@ -34,6 +35,7 @@
     "peer": "^1.0.2",
     "peerjs": "^1.5.1",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
